--- a/RazorPizza/wwwroot/css/style.scss
+++ b/RazorPizza/wwwroot/css/style.scss
@@ -60,3 +60,22 @@
   min-height: 200px;
   border-radius: 20px;
 }
+
+.Text-Shadow {
+  text-shadow: 3px 3px rgba(220,38,38,1);
+}
+
+.Text-Shadow-Red {
+  text-shadow: 3px 3px rgb(255, 0, 0);
+}
+
+.Text-Shadow-White {
+  text-shadow: 3px 3px rgb(255, 255, 255);
+}
+
+.BG-Pizza {
+  background-image: url("https://images.unsplash.com/photo-1505682750263-f3f9e519c565?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+}
