--- a/RazorPizza/wwwroot/css/style.css
+++ b/RazorPizza/wwwroot/css/style.css
@@ -1,18 +1,18 @@
 @import url("https://fonts.googleapis.com/css2?family=Lobster&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap");
 * {
-  font-family: 'Josefin Sans', sans-serif;
+  font-family: "Josefin Sans", sans-serif;
 }
 
 .Main-BG {
   background-image: url("https://images.unsplash.com/photo-1614723100188-65df627e4ada?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80");
-  background-repeat: no-repeat;
-  background-position: center;
   background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
 }
 
 .Main-Title {
-  font-family: 'Lobster', cursive;
+  font-family: "Lobster", cursive;
 }
 
 .Main-Text {
@@ -44,7 +44,7 @@
 .Box-Image-3 {
   background-image: url("https://images.unsplash.com/photo-1618040996337-56904b7850b9?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80");
   background-size: cover;
-  background-position: left;
+  background-position: center;
   background-repeat: no-repeat;
   height: 100%;
   min-height: 200px;
@@ -52,30 +52,44 @@
 
 .Make-Own {
   background-image: url("https://images.unsplash.com/photo-1574071318508-1cdbab80d002?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1469&q=80");
-  background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
+  background-repeat: no-repeat;
   height: 400px;
   min-height: 200px;
   border-radius: 20px;
 }
 
 .Text-Shadow {
-  text-shadow: 3px 3px #dc2626;
+  text-shadow: 3px 3px rgb(220, 38, 38);
 }
 
 .Text-Shadow-Red {
-  text-shadow: 3px 3px red;
+  text-shadow: 3px 3px rgb(220, 38, 38);
 }
 
 .Text-Shadow-White {
-  text-shadow: 3px 3px white;
+  text-shadow: 3px 3px rgb(255, 255, 255);
 }
 
 .BG-Pizza {
   background-image: url("https://images.unsplash.com/photo-1505682750263-f3f9e519c565?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80");
-  background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
+  background-repeat: no-repeat;
 }
+
+.Pizza-BG {
+  background-image: url("https://images.unsplash.com/photo-1603074629126-89ba2fcbb889?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+.Other-Test {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 /*# sourceMappingURL=style.css.map */
