--- a/RazorPizza/wwwroot/css/site.css
+++ b/RazorPizza/wwwroot/css/site.css
@@ -600,6 +600,16 @@ video {
   margin-right: 0.5rem;
 }
 
+.mx-16 {
+  margin-left: 4rem;
+  margin-right: 4rem;
+}
+
+.mx-32 {
+  margin-left: 8rem;
+  margin-right: 8rem;
+}
+
 .mt-16 {
   margin-top: 4rem;
 }
@@ -1014,6 +1024,10 @@ video {
   padding-left: 1rem;
 }
 
+.pb-32 {
+  padding-bottom: 8rem;
+}
+
 .text-center {
   text-align: center;
 }
@@ -1051,6 +1065,16 @@ video {
 .text-base {
   font-size: 1rem;
   line-height: 1.5rem;
+}
+
+.text-4xl {
+  font-size: 2.25rem;
+  line-height: 2.5rem;
+}
+
+.text-xl {
+  font-size: 1.25rem;
+  line-height: 1.75rem;
 }
 
 .font-extrabold {
