--- a/RazorPizza/wwwroot/css/style.css
+++ b/RazorPizza/wwwroot/css/style.css
@@ -86,6 +86,13 @@
   background-repeat: no-repeat;
 }
 
+.Other-BG {
+  background-image: url("https://images.unsplash.com/photo-1616141032335-7e6b413f93ec?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
 .Other-Test {
   margin: 0;
   padding: 0;
