--- a/RazorPizza/Pages/Shared/_Layout.cshtml
+++ b/RazorPizza/Pages/Shared/_Layout.cshtml
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-<header aria-label="Site Header" class="bg-red-600 text-white shadow-lg sticky top-0">
+<header aria-label="Site Header" class="bg-red-600 text-white shadow-lg sticky top-0 z-50">
     <div class="mx-auto max-w-screen-xl px-4 sm:px-6 lg:px-8">
         <div class="flex h-16 items-center justify-between">
             <div class="flex-1 md:flex md:items-center md:gap-12 text-white">
@@ -43,8 +43,8 @@
                         <li>
                             <a
                                 class="text-white transition hover:text-gray-100/75"
-                                asp-page="Privacy">
-                                Privacy
+                                asp-page="Orders">
+                                Order
                             </a>
                         </li>
                     </ul>
@@ -71,6 +71,11 @@
             <li>
                 <a asp-page="Pizza" class="mr-4 hover:underline md:mr-6 ">Pizza</a>
             </li>
+
+            <li>
+                <a asp-page="Orders" class="mr-4 hover:underline md:mr-6 ">Order</a>
+            </li>
+            
             <li>
                 <a asp-page="Privacy" class="mr-4 hover:underline md:mr-6">Privacy Policy</a>
             </li>
